chat keys part 1